--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
+        "lint:fix": "eslint . --fix",
+        "prepare": "husky"
     },
     "dependencies": {
         "@tanstack/react-query": "^5.66.0",
@@ -29,6 +30,7 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^9.20.0",
+        "husky": "^9.1.7",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
