--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-slot": "^1.1.2",
         "@tanstack/react-query": "^5.66.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -27,6 +29,7 @@
         "@antfu/eslint-config": "^4.2.0",
         "@commitlint/cli": "^19.7.1",
         "@commitlint/config-conventional": "^19.7.1",
+        "@tanstack/react-query-devtools": "^5.66.0",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
